updated minor ixes. Made sure the nav works correctly on smaller dimension and burger menu closes once a link is selected

--- a/src/component/authLinks/authLinks.module.css
+++ b/src/component/authLinks/authLinks.module.css
@@ -37,8 +37,4 @@
   .burger {
     display: flex;
   }
-
-  .link{
-    display: none;
-  }
 }
